fix share button jump

--- a/src/assets/css/molecules/_app-stats.scss
+++ b/src/assets/css/molecules/_app-stats.scss
@@ -2,10 +2,10 @@
 .app-views,
 .app-bookmark,
 .app-btn-share {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  // height: 100%;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
   span {
     color: $light-grey;
     padding: 0 .4rem;
